Updated Ru/En language files

--- a/software/lang/en.po
+++ b/software/lang/en.po
@@ -428,3 +428,11 @@ msgstr "Save as..."
 #: tscripteditform.menuitemsection.caption
 msgid "Секция ="
 msgstr "Section ="
+
+#: tmainform.speedbutton1.hint
+msgid "Выполнить скрипт"
+msgstr "Run script"
+
+#: tmainform.label_chip_scripts.caption
+msgid "Скрипты"
+msgstr "Scripts"
