Added option sending SPI 0xAB opcode(Release device from power-down) #73

--- a/software/lang/en.po
+++ b/software/lang/en.po
@@ -271,6 +271,10 @@ msgstr "Search"
 msgid "Не писать FF"
 msgstr "Do not write FF"
 
+#: tmainform.menusendab.caption
+msgid "Выводить чип из сна"
+msgstr "Send "wake-up" to flash"
+
 #: tmainform.menugotooffset.caption
 msgid "Перейти по адресу"
 msgstr "Goto address"
