--- a/software/lang/ru.po
+++ b/software/lang/ru.po
@@ -92,6 +92,9 @@ msgstr "Поиск"
 #: tmainform.menuskipff.caption
 msgstr "Не писать FF"
 
+#: tmainform.menusendab.caption
+msgstr "Выводить чип из сна"
+
 #: tmainform.menugotooffset.caption
 msgstr "Перейти по адресу"
 
